First time uploading the program

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /WOTVCalc/obj
+/WOTVCalc/bin/Debug/netcoreapp3.1
